--- a/Interface/assets/sass/components/_color-variables.scss
+++ b/Interface/assets/sass/components/_color-variables.scss
@@ -17,9 +17,10 @@ $paleta: (
   "base":     #438945,
   "azul":     #3cbcc3,
   "amarelo":  #eba63f,
-  "branco":   #fafafa,  
+  "branco":   #fafafa,
   "vermelho": #e40c2b,
-  "preto":    #1d1d2c
+  "preto":    #1d1d2c,
+  "cinza":    #c5c5c5
 );
 
 $red: (
