--- a/Interface/assets/sass/almocai.scss
+++ b/Interface/assets/sass/almocai.scss
@@ -41,7 +41,12 @@
 // @import "components/timepicker";
 
 // Páginas
+
+// Entrar
 @import "entrar";
+
+// Aluno
 @import "aluno/cardapio";
 @import "aluno/banner";
-@import "aluno/pagina-inicial"
+@import "aluno/pagina-inicial";
+@import "aluno/perfil";
