--- a/Interface/assets/sass/aluno/_cardapio.scss
+++ b/Interface/assets/sass/aluno/_cardapio.scss
@@ -57,10 +57,10 @@
       }
     }
 
-    &--veggie {
+    &--icon {
       height: 1rem; 
       position: absolute; 
-      margin: .25rem auto auto .5rem
+      margin: .25rem auto auto .5rem;
     }
 
   }
