--- a/Interface/assets/sass/components/_global.scss
+++ b/Interface/assets/sass/components/_global.scss
@@ -788,3 +788,9 @@ td, th{
 .no-padding {
   padding: 0 !important;
 }
+
+.margin-zero-mobile {
+  @media #{$small-and-down} {
+    padding: 0 !important;
+  }
+}
