--- a/Interface/assets/sass/aluno/_pagina-inicial.scss
+++ b/Interface/assets/sass/aluno/_pagina-inicial.scss
@@ -3,12 +3,16 @@
     @extend .nunito;
     @extend .center;
     @extend .almocai-text;
+    @media #{large-and-up} {
+      font-size: 2.5rem;
+    }
   }
 
   &__data {
     @extend .center;
     @extend .almocai-text;
     @extend .text-preto;
+    font-size: 1.25rem;
   }
 
 }
