--- a/Interface/assets/sass/almocai.scss
+++ b/Interface/assets/sass/almocai.scss
@@ -23,10 +23,10 @@
 // @import "components/tabs";
 // @import "components/tooltip";
 @import "components/buttons";
-// @import "components/dropdown";
+@import "components/dropdown";
 @import "components/waves";
 // @import "components/modal";
-// @import "components/collapsible";
+@import "components/collapsible";
 // @import "components/chips";
 // @import "components/materialbox";
 @import "components/forms/forms";
