--- a/Interface/assets/sass/almocai.scss
+++ b/Interface/assets/sass/almocai.scss
@@ -42,11 +42,16 @@
 
 // Páginas
 
+
+
 // Entrar
-@import "entrar";
+@import "entrar/entrar";
 
 // Aluno
 @import "aluno/cardapio";
 @import "aluno/banner";
 @import "aluno/pagina-inicial";
 @import "aluno/perfil";
+
+// Servidor
+@import "servidor/servidor";
