--- a/Interface/assets/sass/aluno/_banner.scss
+++ b/Interface/assets/sass/aluno/_banner.scss
@@ -16,6 +16,7 @@
   }
 
   min-height: 30rem;
+  margin-top: -4.5rem !important;
   -webkit-clip-path: polygon(0 0%, 100% 0%, 100% 80%, 0% 100%);
   clip-path: polygon(0 0%, 100% 0%, 100% 80%, 0% 100%);
   
