--- a/Interface/assets/sass/almocai.scss
+++ b/Interface/assets/sass/almocai.scss
@@ -25,12 +25,12 @@
 @import "components/buttons";
 @import "components/dropdown";
 @import "components/waves";
-// @import "components/modal";
+@import "components/modal";
 @import "components/collapsible";
 // @import "components/chips";
 // @import "components/materialbox";
 @import "components/forms/forms";
-// @import "components/table_of_contents";
+@import "components/table_of_contents";
 @import "components/sidenav";
 // @import "components/preloader";
 // @import "components/slider";
@@ -53,5 +53,8 @@
 @import "aluno/pagina-inicial";
 @import "aluno/perfil";
 
-// Servidor
-@import "servidor/servidor";
+// Funcionário
+@import "funcionario/funcionario";
+
+// Administrador
+@import "administrador/administrador";
