--- a/Interface/assets/sass/almocai.scss
+++ b/Interface/assets/sass/almocai.scss
@@ -40,10 +40,6 @@
 // @import "components/datepicker";
 // @import "components/timepicker";
 
-// Páginas
-
-
-
 // Entrar
 @import "entrar/entrar";
 
@@ -58,3 +54,6 @@
 
 // Administrador
 @import "administrador/administrador";
+
+// Nutricionista
+@import "nutricionista/nutricionista";
