--- a/Interface/assets/sass/aluno/_banner.scss
+++ b/Interface/assets/sass/aluno/_banner.scss
@@ -15,6 +15,28 @@
     background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/aluno/fundo-perfil.jpg);
   }
 
+  // Admnistrador --> Página Inicial
+  &--4 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-pagina-inicial.jpg);
+  }
+  // Admnistrador --> Aluno
+  &--5 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-aluno.jpg);
+  }
+  // Admnistrador --> Funcionário
+  &--6 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-funcionario.jpg);
+  }
+  // Admnistrador --> Nutricionista
+  &--7 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-nutricionista.jpg);
+  }
+
+  // Funcionário
+  &--8 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-funcionario.jpg);
+  }
+
   min-height: 30rem;
   margin-top: -4.5rem !important;
   -webkit-clip-path: polygon(0 0%, 100% 0%, 100% 80%, 0% 100%);
