--- a/Interface/assets/sass/aluno/_banner.scss
+++ b/Interface/assets/sass/aluno/_banner.scss
@@ -34,7 +34,12 @@
 
   // Funcionário
   &--8 {
-    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/adm/fundo-funcionario.jpg);
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/funcionario/fundo-funcionario.jpg);
+  }
+
+  // Nutricionista
+  &--9 {
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/nutricionista/fundo-nutricionista.jpg);
   }
 
   min-height: 30rem;
