--- a/Interface/assets/sass/aluno/_cardapio.scss
+++ b/Interface/assets/sass/aluno/_cardapio.scss
@@ -13,6 +13,33 @@
 
 }
 
+// Fundos confirmado ou não
+
+.aluno__confirmado {
+  background: rgba(67, 137, 69, .1) !important;
+
+  li {
+
+    &:not(:last-child) {
+      border-bottom: .1rem solid $primary-color !important;
+    }
+
+  }
+
+}
+
+.aluno__negado {
+  background: rgba(228, 12, 43, .1) !important;
+
+  li {
+
+    &:not(:last-child) {
+      border-bottom: .1rem solid $quaternary-color-dark !important;
+    }
+
+  }
+}
+
 // Estilo dos cartões de cardápio
 .cardapio {
 
@@ -37,6 +64,68 @@
     @extend .hoverable;
   }
 
+  &__confirmacao {
+    padding-bottom: 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    margin: 0;
+    padding-top: 0;
+
+    &--confirmado {
+      @extend .center;
+      @extend .nunito;
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+      margin: 0;
+      font-size: 2rem;
+      color: $primary-color-dark;
+    }
+
+    &--negado {
+      @extend .center;
+      @extend .nunito;
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+      margin: 0;
+      font-size: 2rem;
+      color: $quaternary-color-dark;
+    }
+
+    &--title {
+      @extend .center;
+      @extend .nunito;
+      font-size: 1.5rem;
+    }
+
+    &--btn {
+      width: 100% !important;
+      @extend .z-depth-3;
+      &:hover {
+        @extend .z-depth-2;
+      }
+      &:active, :focus {
+        @extend .z-depth-0;
+      }
+
+      &--1 {
+        @extend .z-depth-3;
+        &:hover {
+          @extend .z-depth-2;
+        }
+        &:active, :focus {
+          @extend .z-depth-0;
+        }
+        margin-bottom: 1.75rem;
+        min-width: 50%;
+        @media #{$small-and-down} {
+          min-width: 75%;
+          text-align: center !important
+        }
+      }
+
+    }
+  }
+
   &__lista {
     position: relative;
     margin: 0;
@@ -45,7 +134,6 @@
     transform: translateX(-50%);
     list-style: none;
     width: 75%;
-    padding-bottom: 1rem;
 
     li {
       text-align: center;
