--- a/Interface/assets/sass/funcionario/_funcionario.scss
+++ b/Interface/assets/sass/funcionario/_funcionario.scss
@@ -48,8 +48,8 @@
       margin: 0;
       padding: 0;
       padding-bottom: 1rem !important;
-      font-size: 2rem;
-      @extend .nunito;
+      font-size: 2.5rem;
+      font-weight: 700;
     }
 
     &--subdata {
