Interface - Gerenciar Cardápios
Alterado o padrão dos cartões para adicionar primeiro e mostrar depois.

--- a/Interface/assets/sass/components/_global.scss
+++ b/Interface/assets/sass/components/_global.scss
@@ -803,6 +803,10 @@ td, th{
   margin-top: 1.5rem !important;
 }
 
+.margin-top-tiny {
+  margin-top: 1.25rem !important;
+}
+
 .green-gradient {
   background-image: linear-gradient(to right bottom, #438945, #469048, #4a974c, #4d9f4f, #51a653) !important;
 }
