--- a/assets/sass/almocai.scss
+++ b/assets/sass/almocai.scss
@@ -37,7 +37,7 @@
 // @import "components/carousel";
 // @import "components/tapTarget";
 // @import "components/pulse";
-// @import "components/datepicker";
+@import "components/datepicker";
 // @import "components/timepicker";
 
 // Entrar
