--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -802,3 +802,11 @@ td, th{
 .margin-top-small {
   margin-top: 1.5rem !important;
 }
+
+.margin-top-tiny {
+  margin-top: 1.25rem !important;
+}
+
+.green-gradient {
+  background-image: linear-gradient(to right bottom, #438945, #469048, #4a974c, #4d9f4f, #51a653) !important;
+}
