--- a/Interface/assets/sass/administrador/_administrador.scss
+++ b/Interface/assets/sass/administrador/_administrador.scss
@@ -2,14 +2,15 @@
 
   &__card {
     @extend .center;
+    
 
     &--icone {
-      font-size: 5rem;
+      font-size: 10rem;
       padding-top: 1rem;
     }
 
     &--titulo {
-      font-size: 2rem;
+      font-size: 2.5em;
       padding-bottom: 1rem;
     }
   }
@@ -122,33 +123,5 @@
   }
   input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=url]:not(.browser-default):focus:not([readonly])+label, input[type=time]:not(.browser-default):focus:not([readonly])+label, input[type=date]:not(.browser-default):focus:not([readonly])+label, input[type=datetime]:not(.browser-default):focus:not([readonly])+label, input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, input[type=tel]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, input[type=search]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
     color: $secondary-color !important;
-  }
-}
-
-.form-amarelo {
-  .input-field input[type=text]:focus + label {
-    color: $tertiary-color !important;
-  }
-  .input-field input[type=text]:focus {
-    border-bottom: 1px solid $tertiary-color !important;
-    box-shadow: 0 1px 0 0 $tertiary-color !important;
-  }
-  .input-field input[type=text].valid {
-    border-bottom: 1px solid $tertiary-color !important;
-    box-shadow: 0 1px 0 0 $tertiary-color !important;
-  }
-  .input-field input[type=text].invalid {
-    border-bottom: 1px solid $tertiary-color !important;
-    box-shadow: 0 1px 0 0 $tertiary-color !important;
-  }
-  .input-field .prefix.active {
-    color: $tertiary-color !important;
-  }
-  input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid $tertiary-color !important;
-    box-shadow: 0 1px 0 0 $tertiary-color !important;
-  }
-  input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=url]:not(.browser-default):focus:not([readonly])+label, input[type=time]:not(.browser-default):focus:not([readonly])+label, input[type=date]:not(.browser-default):focus:not([readonly])+label, input[type=datetime]:not(.browser-default):focus:not([readonly])+label, input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label, input[type=tel]:not(.browser-default):focus:not([readonly])+label, input[type=number]:not(.browser-default):focus:not([readonly])+label, input[type=search]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
-    color: $tertiary-color !important;
   }
 }
