--- a/Interface/assets/sass/aluno/_perfil.scss
+++ b/Interface/assets/sass/aluno/_perfil.scss
@@ -33,6 +33,30 @@
 
   }
 
+  &__cartao-proteina {
+    padding: 2rem;
+
+    &--titulo {
+      @extend .center;
+      @extend .nunito;
+      @extend .almocai-text;
+      @extend .text-amarelo; 
+    }
+
+    &--select {
+      .select-wrapper input.select-dropdown:focus {
+        border-bottom: 1px solid $tertiary-color;
+      }
+      .dropdown-content li > a, .dropdown-content li > span {
+          color: $tertiary-color;
+      }
+      .select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
+        color: rgba(0,0,0,0.3) !important;
+      }
+    }
+
+  }
+
   &__cartao-intolerancia {
 
     padding: 2rem;
@@ -40,78 +64,6 @@
     &--titulo {
       @extend .center;
       @extend .almocai-text;
-    }
-
-  }
-
-  &__cartao-vegetariano {
-
-    padding: 2rem;
-    
-    &--radio {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    
-    &--titulo {
-      @extend .center;
-      @extend .almocai-text;
-      @extend .text-amarelo;
-    }
-
-    .radio-amarelo {
-      [type="radio"]:checked + span::after, [type="radio"].with-gap:checked + span::before, [type="radio"].with-gap:checked + span::after {
-        border: 2px solid $tertiary-color !important;
-      }
-      [type="radio"]:checked + span::after, [type="radio"].with-gap:checked + span::after {
-        background-color: $tertiary-color !important;
-      }
-      [type="radio"]:not(:checked) + span::before, [type="radio"]:not(:checked) + span::after {
-        border: 2px solid $tertiary-color !important;
-      }
-    }
-
-  }
-
-  &__cartao-vegano {
-
-    padding: 2rem;
-    
-    &--radio {
-      text-align: center;
-      margin-top: 2rem; 
-    }
-    
-    &--titulo {
-      @extend .center;
-      @extend .almocai-text;
-    }
-
-  }
-
-  &__cartao-carne {
-
-    padding: 2rem;
-
-    &--checkbox {
-      text-align: justify;
-      margin-top: 2rem;
-    }
-
-    &--titulo {
-      @extend .center;
-      @extend .almocai-text;
-      @extend .text-vermelho;
-    }
-
-    .checkbox-vermelho {
-      [type="checkbox"].filled-in:checked + span:not(.lever)::after {
-        border: 2px solid $quaternary-color !important;
-        background-color: $quaternary-color !important;
-      }
-      [type="checkbox"].filled-in:not(:checked) + span:not(.lever)::after {
-        border: 2px solid $quaternary-color;
-      }
     }
 
   }
