--- a/Interface/assets/sass/components/_collapsible.scss
+++ b/Interface/assets/sass/components/_collapsible.scss
@@ -12,7 +12,7 @@
   }
 
   display: flex;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   line-height: 1.5;
@@ -30,6 +30,7 @@
     display: inline-block;
     text-align: center;
     margin-right: 1rem;
+    height: min-content;
   }
 }
 .keyboard-focused .collapsible-header:focus {
