--- a/Interface/assets/sass/components/_global.scss
+++ b/Interface/assets/sass/components/_global.scss
@@ -39,6 +39,21 @@ ul {
 
     & > li {
       list-style-type: none;
+      
+      &.active {
+        i {
+          transition: all .25s;
+          transform: rotate(45deg);
+        }
+      }
+
+      &:not(.active) {
+        i {
+          transition: all .25s;
+          transform: rotate(0deg);
+        }
+      }
+
     }
   }
 }
