--- a/assets/sass/almocai.scss
+++ b/assets/sass/almocai.scss
@@ -52,5 +52,8 @@
 // Funcionário
 @import "funcionario/funcionario";
 
+// Sobre
+@import "sobre/sobre";
+
 // Administrador
 @import "administrador/administrador";
