--- a/assets/sass/components/_collapsible.scss
+++ b/assets/sass/components/_collapsible.scss
@@ -30,6 +30,7 @@
     display: inline-block;
     text-align: center;
     margin-right: 1rem;
+    height: min-content;
   }
 }
 .keyboard-focused .collapsible-header:focus {
