--- a/assets/sass/aluno/_banner.scss
+++ b/assets/sass/aluno/_banner.scss
@@ -75,6 +75,12 @@
     background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/funcionario/intolerancia.jpg);
   }
 
+  // Entrar --> Recuperar senha
+  &--14 {
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($primary-color-light, 0.6)), to(rgba($primary-color-dark, 0.6))), url(../img/entrar/recuperar.jpg);
+    background-image: linear-gradient(to right bottom, rgba($primary-color-light, 0.6), rgba($primary-color-dark, 0.6)), url(../img/entrar/recuperar.jpg);
+  }
+
 
   min-height: 30rem;
   margin-top: -4.5rem !important;
@@ -85,12 +91,18 @@
     text-align: center;
     color: $branco;
     @extend .nunito;
-    font-size: 6rem;
+    font-size: 5rem;
+  }
+
+  @media #{$medium-only} {
+    &__titulo {
+      font-size: 4rem;
+    }
   }
 
   @media #{$small-and-down} {
     &__titulo {
-      font-size: 4rem;
+      font-size: 3.5rem;
     }
   }
 
